# trillek-client-core

./: .gitignore  CMakeLists.txt
cmake/: GLEW.cmake  SFML.cmake
include/: client.h  make_unique.h
include/asset_loaders/: asset_loader.h  basic_voxel_asset_loader.h  voxel_mesh_asset_loader.h  voxelfile_format.h
include/data/: basic_octree.h  data.h  mesh_data.h  render_data.h  voxel.h  voxel_array.h  voxel_data.h  voxel_octree.h
include/general/: are_same.h  count_unique_params.h  min_max.h
include/math/: axis_aligned_box.h  math_general.h  vector.h
include/rendering/: camera.h  dual_marching_cubes_render_algorithm.h  first_person_camera.h  light_source.h  marching_cubes_lookup_table.h  marching_cubes_render_algorithm.h  render_algorithm.h  render_tree.h  transformation_node.h  voxel_model.h
include/services/: asset_service.h  cust_settings_service.h  event_service.h  event_service_events.h  graphics_service.h  input_service.h  key_codes.h  mouse_button_codes.h  mouse_listener.h  opengl_graphics_service.h  service.h  settings_service.h  sfml_key_convert.h  sfml_mouse_button_convert.h  sfml_window_service.h  window_service.h
src/: client.cpp  main.cpp
src/asset_loaders/: basic_voxel_asset_loader.cpp  voxel_mesh_asset_loader.cpp  voxelize_mesh_defines.h  voxelize_mesh_utils.cpp  voxelize_mesh_utils.h  voxelize_ray_trace.cpp  voxelize_ray_trace.h  voxelize_surface.cpp  voxelize_surface.h
src/data/: mesh_data.cpp  render_data.cpp  voxel.cpp  voxel_array.cpp  voxel_octree.cpp
src/math/: axis_aligned_box.cpp  vector.cpp
src/rendering/: camera.cpp  dual_marching_cubes_render_algorithm.cpp  first_person_camera.cpp  light_source.cpp  marching_cubes_render_algorithm.cpp  render_algorithm.cpp  render_tree.cpp  transformation_node.cpp  voxel_model.cpp
src/services/: asset_service.cpp  cust_settings_service.cpp  event_service.cpp  input_service.cpp  opengl_graphics_service.cpp  settings_service.cpp  sfml_window_service.cpp
